<resources>
    <string name="app_name">FISHERMAN</string>
    <string name="title_activity_chats" translatable="false">ChatsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>
    <string name="icono_menu">Icono de menú</string>
    <string name="agregar">Agregar</string>
    <string name="guardados">Guardados</string>
    <string name="chat">Chat</string>
    <string name="nombre">Nombre</string>
    <string name="escribe_mensaje">Escribe tu message</string>
    <string name="enviar">Enviar</string>
    <string name="repite_contrasena">Repite Contraseña</string>
    <string name="repite_contraseña">Repite la contraseña aquí</string>
    <string name="mostrar_contraseña">Mostrar Contraseña</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="ingrese_usuario">Ingrese el usuario aquí</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingrese_contraseña">Ingrese la contraseña aquí</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="entrar">Entrar</string>
    <string name="lorem_ipsum" translatable="false">asdas asd as da sd as d as d as d  asdd</string>
    <string name="close_button" translatable="false">button close</string>
    <string name="weather_icon" />
    <string name="temperature">temperatura</string>
    <string name="time">tiempo</string>
    <string name="description">descripcion</string>
    <string name="location">location</string>
    <string name="date">fecha</string>
    <string-array name="marker_icons_array">
            <item>Azure</item>
            <item>Red</item>
            <!-- Agrega más íconos aquí -->
    </string-array>
</resources>