<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="8dp"
    android:background="@drawable/item_background">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@string/weather_icon"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/time" />

    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/temperature" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/description" />
</LinearLayout>
