<!-- activity_chats.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DAE8FC"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/volver"
            android:layout_gravity="center_vertical"
            android:onClick="logout"
            android:contentDescription="@string/icono_menu"
            android:id="@+id/logout"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="35sp"
            android:layout_marginStart="16dp"
            android:textColor="#000000"
            android:fontFamily="@font/skranji_bold"/>
        <LinearLayout
            android:id="@+id/iconsMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#DAE8FC"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:paddingLeft="5dp">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_add"
                android:contentDescription="@string/agregar"
                android:layout_marginEnd="10dp"
                android:id="@+id/addPublicacion"/>

            <!-- Botón de sobre de guardados -->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_guard_r"
                android:contentDescription="@string/guardados"
                android:layout_marginEnd="16dp" />

            <!-- Botón de chat -->
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/id_chat_r"
                android:contentDescription="@string/chat" />
        </LinearLayout>

    </LinearLayout>


    <!-- RecyclerView para mostrar la lista de chats -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewChats"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topMenu"
        android:padding="8dp"
        android:clipToPadding="false"
        android:background="#F5F5F5"/>

</RelativeLayout>
